perfs: limit the count of post-tracing loops (#609)
Signed-off-by franklin.delehelle@consensys.net